tests/ui/rfcs/rfc-0000-never_patterns/ICE-130779-never-arm-no-oatherwise-block.rs
#![feature(never_patterns)]
#![allow(incomplete_features)]

enum E { A }

fn main() {
    match E::A {
        ! | //~ ERROR: a trailing `|` is not allowed in an or-pattern
        //~^ ERROR: mismatched types
        if true => {} //~ ERROR: a never pattern is always unreachable
    }
}
